[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.18.0"
appdirs = "^1.4.4"
loralib = "^0.1.1"
black = {extras = ["jupyter"], version = "^23.3.0"}
datasets = "^2.12.0"
fire = "^0.5.0"
peft = {git = "https://github.com/huggingface/peft.git"}
transformers = ">=4.28.0"
sentencepiece = "^0.1.98"
gradio = "^3.28.1"
setproctitle = "^1.3.2"
bitsandbytes = "^0.38.1"
wandb = "^0.15.0"
