[tool.poetry]
name = "kullm"
version = "1.0.0"
description = "Korea University Large Langauge Model"
authors = ["Taemin Lee <taeminlee@korea.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
transformers = "^4.29.2"
torch = "2.0.0"
accelerate = "^0.19.0"


[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
